add translation and refactor code of project
Co-Authored-By: Eugene <150532404+AgentGarrus@users.noreply.github.com>

--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -13,4 +13,5 @@
   --border-color-active: rgba(47, 47, 47, 0.4);
   --placeholder: rgba(47, 47, 47, 0.6);
   --text-span: rgba(47, 47, 47, 0.5);
+  --gray-opacity: rgba(50, 63, 71, 0.4);
 }
