--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -1,14 +1,15 @@
 .userBarMenu {
-  display: flex;
+  /* display: flex;
   align-items: center;
   gap: 8px;
   position: relative;
   min-width: 170px;
-  justify-content: center;
+  justify-content: center; */
+  position: relative;
 }
 
 .userBarBtn {
-  display: flex;
+  /* display: flex;
   align-items: center;
   gap: 8px;
   border-radius: 30px;
@@ -26,7 +27,28 @@
   z-index: 1;
   width: 100%;
   max-width: 100%;
-  flex-grow: 1;
+  flex-grow: 1; */
+
+  position: relative;
+  z-index: 1;
+  display: inline-flex;
+  padding: 6px 12px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 30px;
+  background-color: var(--dark-blue);
+  width: max-content;
+}
+
+.userName {
+  color: var(--white);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+  letter-spacing: -0.01em;
 }
 
 .avatar {
@@ -52,7 +74,16 @@
   width: 16px;
   height: 16px;
   stroke: var(--white);
-  transition: transform 0.3s;
+  transition: transform var(--Animation_cubic), stroke var(--Animation_cubic),
+    background-color var(--Animation_cubic);
+  border-radius: 50%;
+  padding: 2px;
+}
+
+.userBarBtn:active .chevron,
+.userBarBtn:hover .chevron {
+  background-color: var(--light-green);
+  stroke: var(--dark-blue);
 }
 
 .chevron.open {
@@ -60,6 +91,15 @@
 }
 
 @media screen and (min-width: 768px) {
+  .userBarBtn {
+    gap: 10px;
+  }
+
+  .userName {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
   .avatar {
     width: 38px;
     height: 38px;
