--- a/src/components/UserBarPopover/UserBarPopover.module.css
+++ b/src/components/UserBarPopover/UserBarPopover.module.css
@@ -1,19 +1,26 @@
 .userBarPopover {
-  background: var(--white);
-  border: 1px solid #ddd;
-  border-radius: 15px;
-  padding: 14px;
-  box-shadow: 0 4px 8px var(--border-shadow);
   z-index: 1000;
   position: absolute;
   top: 100%;
   left: 0;
   transform: translateY(10px);
   pointer-events: auto;
-  width: 100%;
+
+  width: max-content;
+  padding: 14px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 8px;
+
+  border-radius: 15px;
+  background-color: var(--white);
+  box-shadow: 0px 4px 50px 0px var(--border-shadow);
 }
 
-.popoverButton {
+.settingBtn,
+.logOutBtn {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -22,6 +29,43 @@
   cursor: pointer;
   width: 100%;
   text-align: left;
+}
+
+.textBalk {
+  color: var(--dark-blue);
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.textGray {
+  color: var(--gray-opacity);
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.iconDark {
+  stroke: var(--dark-blue);
+  transition: stroke var(--Animation_cubic);
+}
+
+.iconGray {
+  stroke: var(--gray-opacity);
+  transition: stroke var(--Animation_cubic);
+}
+
+.settingBtn:active .iconDark,
+.settingBtn:hover .iconDark {
+  stroke: var(--light-green-hover);
+}
+
+.logOutBtn:active .iconGray,
+.logOutBtn:hover .iconGray {
+  stroke: var(--light-green-hover);
 }
 
 .CiSettings {
