--- a/src/components/UserPanel/UserPanel.module.css
+++ b/src/components/UserPanel/UserPanel.module.css
@@ -8,8 +8,9 @@
 .salutation {
   font-family: 'Gilroy', sans-serif;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 22px;
   line-height: 1;
+  font-style: normal;
   letter-spacing: -0.01em;
   color: var(--dark-blue);
   margin-bottom: 20px;
