--- a/src/components/WaterList/WaterList.module.css
+++ b/src/components/WaterList/WaterList.module.css
@@ -40,7 +40,14 @@
   margin-top: 40px;
   width: 300px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+
+  color: var(--dark-blue);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  line-height: 1.3;
+  letter-spacing: -0.01emx;
 }
 
 @media screen and (min-width: 343px) {
