--- a/src/components/PageContent/PageContent.module.css
+++ b/src/components/PageContent/PageContent.module.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  height: 100vh;
 }
 
 @media screen and (min-width: 768px) {
@@ -20,5 +19,7 @@
     justify-content: center;
     flex-direction: row;
     gap: 32px;
+    margin: 0;
+    height: 100vh;
   }
 }
