--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -74,16 +74,9 @@
   width: 16px;
   height: 16px;
   stroke: var(--white);
-  transition: transform var(--Animation_cubic), stroke var(--Animation_cubic),
-    background-color var(--Animation_cubic);
+  transition: transform var(--Animation_cubic);
   border-radius: 50%;
   padding: 2px;
-}
-
-.userBarBtn:active .chevron,
-.userBarBtn:hover .chevron {
-  background-color: var(--light-green);
-  stroke: var(--dark-blue);
 }
 
 .chevron.open {
