--- a/src/components/LogOutModal/LogOutModal.module.css
+++ b/src/components/LogOutModal/LogOutModal.module.css
@@ -38,6 +38,17 @@
   width: 100%;
   border-radius: 30px;
   background: var(--Accent, #9be1a0);
+  font-weight: 700;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modalLogoutBtnOut:hover {
+  background: var(--Accent, #87d28d);
+}
+
+.modalLogoutBtnOut:active {
+  background: inherit;
+  color: #bcbcbc;
 }
 
 .modalLogoutBtnCancel {
@@ -49,6 +60,14 @@
   width: 100%;
   border-radius: 30px;
   background: #f0eff4;
+  font-weight: 700;
+  color: #323f474d;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modalLogoutBtnCancel:hover {
+  color: #323f47;
+  background: #f4f4f6;
 }
 
 @media only screen and (min-width: 767.97px) {
