--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -3,9 +3,6 @@
   flex-wrap: wrap;
   column-gap: 17px;
   row-gap: 20px;
-}
-
-ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -14,7 +11,7 @@ ul {
 }
 
 @media only screen and (min-width: 360px) {
-  ul {
+  .calendar {
     width: 310px;
   }
 }
@@ -23,9 +20,6 @@ ul {
   .calendar {
     column-gap: 42px;
     row-gap: 15px;
-  }
-
-  ul {
     width: 620px;
   }
 }
@@ -33,10 +27,6 @@ ul {
 @media only screen and (min-width: 1440px) {
   .calendar {
     column-gap: 42px;
-  }
-
-  ul {
-    width: 620px;
     padding: 0;
   }
 }
